2016-04-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/lib/pic14/bootstrap.sh,
	  device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.am,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.am,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.am,
	  device/lib/pic14/libsdcc/regular/Makefile.in:
	  Workaround the Linux Mint bug: #2482 Link error with pic16f1827

	* device/lib/pic16/*,
	  device/non-free/lib/pic16/*:
	  Downgraded the autoconf version from 1.15 to 1.11.6.

2016-04-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,
	  src/SDCCval.c:
	  Support wide string literals in initialization of global arrays.
	* src/SDCCast.c,
	  Support wide string literals in initialization of local arrays.
	* doc/sdccman.lyx:
	  Update documentation on standard compliance.

2016-04-01 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-950512-1.c
	  Enabled.
	* src/z80/gen.c
	  Improve longlong comptability on different hosts.

2016-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Remove user-visible feature macros for signed / unsigned char.
	* device/include/limits.h:
	  Fix multibyte sequence limit.
	* support/regression/tests/bitvars.c,
	  support/regression/tests/funsigned-char.c:
	  Detect char signedness portably.
	* src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/SDCCglue.c,
	  doc/sdccman.lyx,
	  support/regression/tests/string.c:
	  Support wide string literals outside of array initialization.

2016-03-31 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-pr19606.c
	  Disabled in test-host.

2016-03-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20060127-1.c
	* support/regression/tests/gcc-torture-execute-921029-1.c